# mgw

./: Cargo.toml  README.md  flake.nix
css/: style.scss
src/: bar.rs  css.rs  main.rs  utils.rs
src/bar/: active_window.rs  clock.rs  notifications.rs
