[package]
name = "mgw"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "2.3.1"
gio = "0.20.0"
gtk = { version = "0.9.0", package = "gtk4", features = ["v4_14"] }
gtk4-layer-shell = "0.4.0"
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs", branch = "master" }
notify = "6.1.1"
tokio = { version = "1.39.2", features = ["full"] }

